version/2.0/ripscrip/2.2-curves.md
# 2.2 Curves

[◀ Prev: 2.1 Lines](2.1-lines.md) · [Contents](README.md) · [Next: 2.3 Shapes & Fills ▶](2.3-shapes-and-fills.md)

Curved outline primitives - circles, ellipses, circular and elliptical arcs, and the bezier family, including the 2.x poly-beziers that chain line and curve segments into one object.

_Unlike [the 1.54 record](../../1.54/ripscrip/2.2-curves.md), these primitives honor XOR and the other [write modes](2.0-color-modes-and-palettes.md#rip_write_mode)._

## RIP_CIRCLE

_Draw circle in current color and line thickness_

|               |                                     |
| ------------- | ----------------------------------- |
| **Level**     | 0                                   |
| **Command**   | `C`                                 |
| **Arguments** | `x_center:XY y_center:XY radius:XY` |

**Format:** `!|C <x_center> <y_center> <radius>` **Example:** `!|C1E180M`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting)

This command draws a circle in the current drawing color and line thickness. The `<radius>` is in pixel units. This command understands aspect ratios and will draw a truly circular circle instead of an oblong circle (ellipse) like on other graphics systems.

The radius is considered to be in the horizontal direction for the purpose of aspect ratio calculations. _(v2.A3)_

## RIP_OVAL

_Draw elliptical arc in current color/line style_

|               |                                                  |
| ------------- | ------------------------------------------------ |
| **Level**     | 0                                                |
| **Command**   | `O`                                              |
| **Arguments** | `x:XY y:XY st_ang:2 end_ang:2 x_rad:XY y_rad:XY` |

**Format:** `!|O <x> <y> <st_ang> <end_ang> <x_rad> <y_rad>` **Example:** `!|O1E1A18003G15`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting)

This command draws an elliptical arc similar to the circular [RIP_ARC](#rip_arc) command. The center of the ellipse is (x,y) and the arc is drawn starting from `<st_ang>` and proceeding counterclockwise to `<end_ang>` (see RIP_ARC above for details).

The X radius is half the full width of the ellipse, the Y radius is half the full height. The ellipse is drawn according to the current line thickness, but the current line pattern has no effect.

**NOTE:** This command is identical to the [RIP_OVAL_ARC](#rip_oval_arc) due to historical reasons. See RIP_OVAL_ARC for a discussion of the starting angle and the ending angle parameters of this command. _(v2.A3)_

## RIP_ARC

_Draw circular arc in current color/line thickness_

|               |                                             |
| ------------- | ------------------------------------------- |
| **Level**     | 0                                           |
| **Command**   | `A`                                         |
| **Arguments** | `x:XY y:XY start_ang:2 end_ang:2 radius:XY` |

**Format:** `!|A <x> <y> <start_ang> <end_ang> <radius>` **Example:** `!|A1E18003G0T`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting)

This command draws a circular arc, or a segment of a circle. Drawing begins at `<start_ang>` and terminates at `<end_ang>`. The angles are represented starting at zero for the 3 o'clock position and increasing counterclockwise through a full circle to 360:

```text
     90°
      │
180°──┼──0°
      │
     270°
```

The arc drawing begins at the `<start_angle>` and continues counter-clockwise to the `<end_angle>`. A full circle will be displayed if `<start_ang>`=0 and `<end_ang>`=360. This command recognizes aspect ratios like the circle command does. It does not take advantage of line patterns but does comply with line thickness.

If both angles are equal, nothing is drawn.

The radius is considered to be in the horizontal direction for the purpose of aspect ratio calculations. _(v2.A3)_

Both angles can be greater than 360 degrees. The starting angle must be greater or equal to the ending angle. _(v2.A3)_

## RIP_OVAL_ARC

_Draw an elliptical arc_

|               |                                              |
| ------------- | -------------------------------------------- |
| **Level**     | 0                                            |
| **Command**   | `V`                                          |
| **Arguments** | `x:XY y:XY st_ang:2 e_ang:2 radx:XY rady:XY` |

**Format:** `!|V <x> <y> <st_ang> <e_ang> <radx> <rady>` **Example:** `!|V1E18003G151Q`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting)

This command draws an elliptical arc, or a segment of an ellipse. Drawing begins at `<st_ang>` and terminates at `<e_ang>`. The angles are represented starting at zero for 3 o'clock position and increasing counterclockwise through a full ellipse at 360 degrees:

```text
          90°
           │
   180°────┼────0°
           │
          270°
```

The arc drawing begins at the `<st_ang>` and continues counterclockwise to the `<e_ang>`. A complete ellipse will be displayed if `<st_ang>`=0 and `<e_ang>`=360. This command does not utilize "aspect ratios" because of the nature of an Ellipse. It does not take advantage of line patterns but does comply with line thickness.

Both angles can be greater than 360 degrees. The starting angle must be greater or equal to the ending angle. _(v2.A3)_

## RIP_BEZIER

_Draw a bezier curve_

|               |                                                         |
| ------------- | ------------------------------------------------------- |
| **Level**     | 0                                                       |
| **Command**   | `Z`                                                     |
| **Arguments** | `x1:XY y1:XY x2:XY y2:XY x3:XY y3:XY x4:XY y4:XY cnt:2` |

**Format:** `!|Z <x1> <y1> <x2> <y2> <x3> <y3> <x4> <y4> <cnt>` **Example:** `!|Z0A0B0C0D0E0F0G0H1G`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting)

This command provides customizable curves. Four control points are used to create the shape of the curve. The curves beginning point is at point (x1,y1) and it ends at (x4,y4). Points (x2,y2) and (x3,y3) are not necessarily on the curve, but are used to pull the curve in their direction. The diagram below indicates how points 2 and 3 can be utilized to form the desired curve. Note that points 2 and 3 are not actually on the curve (usually), but points 1 and 4 are.

```text
          X2

         ▄▀▀▀▄
       ▄▀     ▀▀▄▄
      █           ▀▄            X4
     █              ▀▄          █
   X1                 █       ▄▀
                       █    ▄▀
                        ▀▄▄▀

                         X3
```

The last parameter of this command is the `<cnt>` parameter. This determines how many "segments" the curve should be drawn in. Each segment is in fact, a straight line. The more segments you allow, the smoother the curve may be. If a curve does not have a significant amount of "curviness" then a low "count" can improve performance of the curve drawing.

The entire bezier curve is drawn using the current line pattern, thickness and write mode. _(v2.A3)_

The actual bezier curve can be described mathematically by the following parametric equations: _(v2.A3)_

```text
X = X1*(1-t)^3 + X2*3*t*(t-1)^2 + X3*3*t^2*(1-t) + X*4*t^3
Y = Y1*(1-t)^3 + Y2*3*t*(t-1)^2 + Y3*3*t^2*(1-t) + Y*4*t^3
```

These are the normal equational forms of the weighted sum B-Spline function using four control points instead of directional vectors. The variable T is varied from 0.0 through 1.0 over some increment to achieve the total curve. _(v2.A3)_

Bezier Curves use "floating point" math internally for their processing; all parameters specified for this command are simple integers however. If XOR is active when you draw a bezier curve, you will find gaps at the intersections of each segment. _(v1.54)_

> **NOTE:** This command is implemented in C using double floating point numbers. To make sure you do not have round-off or precision errors in another language, you should also use an equivalent floating point type. In Borland's Turbo Pascal, do not use REAL's, but use DOUBLE's instead! _(v1.54)_

## RIP_POLY_BEZIER

_Added in RIPscrip v2.A1._

_Draw a poly-bezier curve (multi-segmented)_

|  |  |
| --- | --- |
| **Level** | 0 |
| **Command** | `z` |
| **Arguments** | `num:2 count:2 x_base:XY y_base:XY ... type:1 x1:XY y1:XY ... type:1 x1:XY y1:XY x2:XY y2:XY x3:XY y3:XY ...` |

**Format:** `!|z <num> <count> <x_base> <y_base> ... <type> <x1> <y1> ... <type> <x1> <y1> <x2> <y2> <x3> <y3> ...` **Example:** See below

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting)

This command is a variation on the [RIP_BEZIER](#rip_bezier) command. The typical RIP_BEZIER command creates one single bezier curve. This command combines one or more bezier curves into a chain of connected bezier curves. Each segment (curve) of the poly-bezier can be of different types. It can be a bezier curve, or a simple straight line. The combination of these facilities allows the construction of say, a text character representation of a font that has some straight line segments and some curved segments. The curved portions (bezier curves) are actually comprised of many smaller straight line segments - when viewed on a monitor, they appear to be a continuous curve. The actual number of segments comprising a particular curve in the poly-bezier is determined by the command's `<count>` parameter.

This command is different than any other in RIPscrip in that its variable length portion of the command is made up of different blocks of parameters which can be different byte lengths! If you look at the definition, the beginning of the command includes a `<num>`, `<count>`, `<x_base>` and `<y_base>` parameter - the remainder of the command is variable length in nature.

### Parameter blocks

The `<num>` parameter defines how many parameter blocks are to be expected in this command. _(v2.A2)_

The `<count>` parameter defines how many "segments" are to be drawn for each bezier curve segment of this poly-bezier curve. This means that all bezier curve segments in a poly-bezier will have the same number of segments for their respective curves. _(v2.A2)_

The `<x_base>` and `<y_base>` parameters define the pixel beginning point for the entire poly-bezier "curve". To determine what type of parameter block follows, you need to look at the first byte of the segment; this is the `<type>` parameter.

The `<type>` parameter defines what type of parameter block is to be parsed. The possible types are:

| Type | Description                  |
| ---- | ---------------------------- |
| 0    | Straight line segment        |
| 1    | Smooth bezier curve segment  |
| 2    | Jointed bezier curve segment |

A "smooth" segment is a bezier curve whose beginning curve is totally smooth with the ending curve of a previous bezier curve. In practice on a terminal system, this doesn't mean anything to a terminal program because it is going to display a bezier curve as a normal bezier curve. The meaning of having a second bezier curve type comes into play when using paint program utilities that let you manipulate poly-bezier curves. A paint system might use this information to control how end-points and control points can be moved because they are "locked" with one or two points from the previous (or next) bezier curve. See the notes at the end of this command's description about smooth bezier curve joints.

If the `<type>` parameter indicates that the segment is a straight-line segment, then there are only two remaining parameters (not including the `<type>` parameter) in the block (the line's end-points) as in the following syntax definition:

```text
type:1 x1:XY y1:XY
```

The `<type>` parameter should be set to "0" for line segments. The (x1,y1) parameters define the endpoints of the line segment. The beginning point of the line is the end-point of the last segment (or the (x_base,y_base) parameters of the command header if this is the first parameter block).

If the `<type>` indicates that the segment is a bezier curve, then the parameter block contains six parameters as in the following syntax definition (not including the `<type>` parameter):

```text
type:1 x1:XY y1:XY x2:XY y2:XY x3:XY y3:XY
```

The first byte is the `<type>` value for this block (be set to 1 or 2 for a bezier curve segment). The remaining six parameters define the first two control points and the end-point for the bezier curve segment. The beginning point of the curve segment is defined as the end-point of the previous block (or the (x_base,y_base) parameter in the header of the command if this is the first parameter block).

Refer to the RIP_BEZIER command for a complete description of bezier curve beginning/end-points and how control points shape the curve to a desired result.

### Example

An example of a poly-bezier curve might be shown as follows: _(v2.A2)_

```text
Segment 1 ────────────┐   P2
  (line)      P1       (50,10)        P3 (110,10)
           (10,10) ■▒▒▒▒■▒▒         X
                   ▒       ▒   ┌────────────── Segment 2
                   ▒        ▒─┘                (bezier)
                   ▒        ▒
                   ▒        ▒       X P4 (110,70)
   Segment 0 ─────▒      ▒▒
     (line)        ▒ P5 ■▒▒▒
                   ▒(50,70) ▒          X P6 (120,70)
                   ▒         ▒───────────────── Segment 3
                   ▒         ▒                    (bezier)
                   ▒(50,130) ▒
        BASE       ▒    P8  ▒            P7 (120,130)
        POINT ────■▒▒▒▒■▒▒▒           X
                 P0/P9
              (10,130) └──────────────────────── Segment 4
                                                  (line)
```

The above diagram shows 5 different segments to the poly-bezier curve. Segments 0, 1 and 4 are straight line segments, and semgents 2 and 3 are actual bezier curves. All X/Y points (beginning-points, end-points and control-points are depicted with X's and are labeled P0 through P9. The parameters to represent this command might appear something like the following (in expanded decimal):

```text
     Decimal     MegaNum     Description
     ──────────────────────────────────────────────────
 !|z 05 ........ 05 ........ 5 segments
     10 ........ 0A ........ 10 lines per bezier curve
       10,130 ..   0A 3M ... Base point - P0
     0 ......... 0 ......... Segment 0 - Line
       10,10 ...   0A 0A ... Line endpoint - P1
     0 ......... 0 ......... Segment 1 - Line
       50,10 ...   1E 0A ... Line endpoint - P2
     1 ......... 1 ......... Segment 2 - Smooth Bezier
       110,10 ..   32 0A ... Control point - P3
       110,70 ..   32 1Y ... Control point - P4
       50,70 ...   1E 1Y ... Curve end point - P5
     2 ......... 2 ......... Segment 3 - Jointed Bezier
       120,70 ..   3C 1Y ... Control point - P6
       120,130 .   3C 3M ... Control point - P7
       50,130 ..   1E 3M ... Curve end point - P8
     0 ......... 0 ......... Segment 4 - Line
       10,130 ..   0A 3M ... Line endpoint - P9
```

Notice that in the preceding example we are not expressing numbers in meganums as would normally be used in RIPscrip files. This is for simple human readability for this example.

The completed command looks like this (base math setting = meganums): _(v2.A2)_

`!|z050A0A3M00A0A01E0A1320A321Y1E1Y23C1Y3C3M1E3M00A3M`

### Smooth joints

This command is often used to combine several segments together into one larger "curve". As previously mentioned, the end-point of one segment is the beginning point of the next segment (if any).

When you are dealing with bezier curve segments, it is possible to make sure that the end of one curve has a perfectly smooth curve with the beginning of the next curve. If two adjacent bezier curve blocks are to have a perfectly smooth "connecting joint", then you must make sure that the last control point and the end-point of the first curve are colinear with the first control point of the second curve. This is not a requirement of this command - it is generic in that it can display any combination of line segments and bezier curve segments. We are simply noting this mathematical attribute of bezier curves for the benefit of the RIPscrip programmer to generate smooth segmented curves in some sort of paint program.

A bezier curve can also have a "smooth joint" with a line segment. If the bezier curve is followed by a line segment, then to make sure that the joint has a smooth curve, you must make sure that the last control point and the end point of the bezier curve segment are colinear with the end-point of the following line segment. The same holds true of the segments are reversed (line segment followed by a bezier curve segment) - the only difference is that the beginning point of a line segment is determined by the end-point of its preceding block (or the base point if the line segment is the first parameter block) and you would be making the starting point of the bezier curve and the 1ST control point colinear.

**NOTE:** Poly-Bezier curves might exhibit pixel annomolies at the beginning and ending points of each segment if thick lines are used for the curve with XOR or other non-COPY write modes. The reason for this is because some graphics engines (Windows, Macintosh, MS-DOS, etc) might not handle things 100.0% perfectly for thick poly-lines in XOR mode (poly-lines are used to represent this command after all segments are broken down).

## RIP_POLY_BEZIER_LINE

_Added in RIPscrip v2.A2._

_Draw a poly-bezier curve (open-ended)_

|  |  |
| --- | --- |
| **Level** | 0 |
| **Command** | `t` |
| **Arguments** | `num:2 count:2 x_base:XY y_base:XY ... type:1 x1:XY y1:XY ... type:1 x1:XY y1:XY x2:XY y2:XY x3:XY y3:XY ...` |

**Format:** `!|t <num> <count> <x_base> <y_base> ... <type> <x1> <y1> ... <type> <x1> <y1> <x2> <y2> <x3> <y3> ...` **Example:** See below

_See [ERRATA.md](ERRATA.md#rip_poly_bezier_line-command-t-not-z) for why this command is `t` rather than the ALPHA 4 draft's `z`._

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting)

This command is a variation on the [RIP_POLY_BEZIER](#rip_poly_bezier) command. The difference is that the RIP_POLY_BEZIER command is a closed object, meaning that the beginning and ending points are connected. With RIP_POLY_BEZIER_LINE, the object does not have it's end points connected. This is just like the difference between [RIP_POLYGON](2.3-shapes-and-fills.md#rip_polygon) and [RIP_POLYLINE](2.1-lines.md#rip_polyline).

This command uses the same parameter order as RIP_POLY_BEZIER.

---

[◀ Prev: 2.1 Lines](2.1-lines.md) · [Contents](README.md) · [Next: 2.3 Shapes & Fills ▶](2.3-shapes-and-fills.md)
