version/3.1/ripscrip/2.2-curves.md
# 2.2 Curves

[◀ Prev: 2.1 Lines](2.1-lines.md) · [Contents](README.md) · [Next: 2.3 Shapes & Fills ▶](2.3-shapes-and-fills.md)

_Reconstructed edition — every claim carries an evidence tag; see [Contents](README.md) for the legend._

This page covers the curved outline primitives: circles, ellipses (ovals), circular and elliptical arcs, and the bezier family — including the 2.30 poly-bezier additions that chain line and curve segments into one object — plus the 3.x era's **skewed-oval family**: six symbol-opcode primitives (`&`, `-`, `]`, `[`, `+`, `_`) named in TeleGrafix's own NEWCMDS.RIP demo comments that exist in no published specification and draw ellipses rotated to arbitrary angles. All draw in the current drawing color and honor line thickness; the circle/oval/arc family does not honor line patterns, while the bezier family does. Arc angles are in degrees, 0 at the 3 o'clock position, increasing counterclockwise to 360. These primitives honor XOR and the other [write modes](2.0-color-modes-and-palettes.md#rip_write_mode) (a 1.54 limitation lifted in 2.30). The filled counterparts (filled circle/oval, pie slices, filled poly-bezier, poly-polygons) are in [2.3 Shapes & Fills](2.3-shapes-and-fills.md); the filled members of the skewed-oval family stay on this page with their outline siblings, as the 3.x record groups them. The 1.54 record of the base commands is [2.2 in the v1.54 reference](../../1.54/ripscrip/2.2-curves.md); the 2.30 record is [2.2 in the v2.30 reference](../../2.30/ripscrip/2.2-curves.md).

## RIP_CIRCLE

_Draw circle in current color and line thickness_

|               |                                     |
| ------------- | ----------------------------------- |
| **Level**     | 0                                   |
| **Command**   | `C`                                 |
| **Arguments** | `x_center:XY y_center:XY radius:XY` |

**Format:** `!|C <x_center> <y_center> <radius>` **Example:** `!|C1E180M`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting) **Evidence:** 2.00a4 ([2.30 entry](../../2.30/ripscrip/2.2-curves.md#rip_circle)) · HLP (`RIP_Circle`) · SyncTERM (ripper.c:13546) — not observed in the RIPtel demo corpus

This command draws a circle in the current drawing color and line thickness. The `<radius>` is in pixel units. This command understands aspect ratios and will draw a truly circular circle instead of an oblong circle (ellipse) like on other graphics systems.

The radius is considered to be in the horizontal direction for the purpose of aspect ratio calculations. _(v2.A3)_

The demos favor [RIP_FILLED_OVAL](2.3-shapes-and-fills.md#rip_filled_oval) and [RIP_FILLED_CIRCLE](2.3-shapes-and-fills.md#rip_filled_circle) over the bare outline form.

## RIP_OVAL

_Draw elliptical arc in current color/line style_

|               |                                                  |
| ------------- | ------------------------------------------------ |
| **Level**     | 0                                                |
| **Command**   | `O`                                              |
| **Arguments** | `x:XY y:XY st_ang:2 end_ang:2 x_rad:XY y_rad:XY` |

**Format:** `!|O <x> <y> <st_ang> <end_ang> <x_rad> <y_rad>` **Example:** `!|O1NLT00A00505`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting) **Evidence:** 2.00a4 ([2.30 entry](../../2.30/ripscrip/2.2-curves.md#rip_oval)) · corpus (6 uses in 4 files) · SyncTERM (ripper.c:13850) — not in the RIPSCRIP.HLP name inventory (only `RIP_OvalArc`)

This command draws an elliptical arc similar to the circular [RIP_ARC](#rip_arc) command. The center of the ellipse is (x,y) and the arc is drawn starting from `<st_ang>` and proceeding counterclockwise to `<end_ang>` (see RIP_ARC for details).

The X radius is half the full width of the ellipse, the Y radius is half the full height. The ellipse is drawn according to the current line thickness, but the current line pattern has no effect.

**NOTE:** This command is identical to the [RIP_OVAL_ARC](#rip_oval_arc) due to historical reasons. See RIP_OVAL_ARC for a discussion of the starting angle and the ending angle parameters of this command. _(v2.A3)_

The 3.x evidence confirms the historical identity: SyncTERM literally implements `V` as a fall-through to `O`, and RIPSCRIP.HLP carries only the `RIP_OvalArc` name for the pair, confirming the 3.0 driver treats them as one command. The SEABYME1.RIP example draws a full ellipse (`00` to `A0` = 360°) of radius 5×5.

## RIP_ARC

_Draw circular arc in current color/line thickness_

|               |                                             |
| ------------- | ------------------------------------------- |
| **Level**     | 0                                           |
| **Command**   | `A`                                         |
| **Arguments** | `x:XY y:XY start_ang:2 end_ang:2 radius:XY` |

**Format:** `!|A <x> <y> <start_ang> <end_ang> <radius>` **Example:** `!|A1E18003G0T`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting) **Evidence:** 2.00a4 ([2.30 entry](../../2.30/ripscrip/2.2-curves.md#rip_arc)) · HLP (`RIP_Arc`) · SyncTERM (ripper.c:13470) — not observed in the RIPtel demo corpus

This command draws a circular arc, or a segment of a circle. Drawing begins at `<start_ang>` and terminates at `<end_ang>`. The angles are represented starting at zero for the 3 o'clock position and increasing counterclockwise through a full circle to 360:

```text
     90°
      │
180°──┼──0°
      │
     270°
```

The arc drawing begins at the `<start_angle>` and continues counter-clockwise to the `<end_angle>`. A full circle will be displayed if `<start_ang>`=0 and `<end_ang>`=360. This command recognizes aspect ratios like the circle command does. It does not take advantage of line patterns but does comply with line thickness.

If both angles are equal, nothing is drawn.

The radius is considered to be in the horizontal direction for the purpose of aspect ratio calculations. _(v2.A3)_

Both angles can be greater than 360 degrees. The starting angle must be greater or equal to the ending angle. _(v2.A3)_

SyncTERM version-gates a 1.54 bug-compatibility quirk after arc drawing (a stale line-pattern register clobber), fixed in its 3.0 mode — evidence that 1.54 and 3.x arc behavior were treated as distinct contracts.

## RIP_OVAL_ARC

_Draw an elliptical arc_

|               |                                              |
| ------------- | -------------------------------------------- |
| **Level**     | 0                                            |
| **Command**   | `V`                                          |
| **Arguments** | `x:XY y:XY st_ang:2 e_ang:2 radx:XY rady:XY` |

**Format:** `!|V <x> <y> <st_ang> <e_ang> <radx> <rady>` **Example:** `!|VOY4Y006O2I1E`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting) **Evidence:** 2.00a4 ([2.30 entry](../../2.30/ripscrip/2.2-curves.md#rip_oval_arc)) · HLP (`RIP_OvalArc`) · corpus (2 uses in SHAPES.RIP) · SyncTERM (ripper.c:13848 — falls through to `O`)

This command draws an elliptical arc, or a segment of an ellipse. Drawing begins at `<st_ang>` and terminates at `<e_ang>`. The angles are represented starting at zero for 3 o'clock position and increasing counterclockwise through a full ellipse at 360 degrees:

```text
          90°
           │
   180°────┼────0°
           │
          270°
```

The arc drawing begins at the `<st_ang>` and continues counterclockwise to the `<e_ang>`. A complete ellipse will be displayed if `<st_ang>`=0 and `<e_ang>`=360. This command does not utilize "aspect ratios" because of the nature of an Ellipse. It does not take advantage of line patterns but does comply with line thickness.

Both angles can be greater than 360 degrees. The starting angle must be greater or equal to the ending angle. _(v2.A3)_

Identical to [RIP_OVAL](#rip_oval) for historical reasons — SyncTERM implements `V` as a literal fall-through to `O`'s handler, and RIPSCRIP.HLP keeps only this name for the pair. The SHAPES.RIP example sweeps 0°–240°.

## The Skewed-Oval Family — 3.x Census Discoveries

_Evidence: corpus (NEWCMDS.RIP, SHAPES.RIP); see the [script census](../../3.1/research/riptel-script-census.md)._

The six commands below exist in no published specification — not 1.54, not 2.00a4. They were recovered from the RIPtel demo corpus, where NEWCMDS.RIP demonstrates each new primitive over a coordinate grid with TeleGrafix's own naming comments ("Show RIP_SKEWED_OVAL", "Show a RIP_SKEWED_OVAL_PIE_SLICE", …), making the canonical names verbatim TeleGrafix. They add what the 1.54/2.30 [RIP_OVAL](#rip_oval) family cannot do: ellipses whose axes are **rotated to an arbitrary angle**. All field meanings come from census analysis; the rotation unit is presumed degrees _(hypothesis)_. The filled members honor [RIP_SET_BORDER](2.3-shapes-and-fills.md#rip_set_border) like the documented filled primitives — NEWCMDS.RIP demos each "With a border" and "Without a border". None of these commands appear in the RIPSCRIP.HLP name inventory or in SyncTERM.

## RIP_SKEWED_OVAL

_Draw an ellipse rotated to an arbitrary angle_

|  |  |
| --- | --- |
| **Level** | 0 |
| **Command** | `&` |
| **Arguments** | `x:2 y:2 x_rad:2 y_rad:2 rotation:2` _(field meanings from census analysis)_ |

**Format:** `!|& <x> <y> <x_rad> <y_rad> <rotation>` **Example:** `!|&W44W281810`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting) _(inferred)_ **Evidence:** corpus (NEWCMDS.RIP — named in TeleGrafix's own comment "Show RIP_SKEWED_OVAL" — and SHAPES.RIP; 3 uses) — not in the 2.00a4 spec, not in the RIPSCRIP.HLP name inventory, not in SyncTERM

The first of six 3.x-era "skewed oval" primitives that exist in no published specification. It draws an ellipse outline whose axes are rotated by the fifth parameter — something the 1.54/2.30 [RIP_OVAL](#rip_oval) family cannot do. The canonical name comes verbatim from NEWCMDS.RIP, whose comments demonstrate each new primitive over a coordinate grid. All five fields are 2-digit MegaNums; the rotation unit is presumed degrees _(hypothesis)_.

## RIP_FILLED_SKEWED_OVAL

_Draw a filled ellipse rotated to an arbitrary angle_

|  |  |
| --- | --- |
| **Level** | 0 |
| **Command** | `-` |
| **Arguments** | `x:2 y:2 x_rad:2 y_rad:2 rotation:2` _(field meanings from census analysis)_ |

**Format:** `!|- <x> <y> <x_rad> <y_rad> <rotation>` **Example:** `!|-W48S281810`

**Attributes used:** Draw Color, Back Color, Line Style, Fill Style, Write Mode, Viewport, Port, Base Math (current setting) _(inferred)_ **Evidence:** corpus (NEWCMDS.RIP — named in comment "Show RIP_FILLED_SKEWED_OVAL" — and SHAPES.RIP; 6 genuine uses) — not in the 2.00a4 spec, not in the RIPSCRIP.HLP name inventory, not in SyncTERM

Filled counterpart of [RIP_SKEWED_OVAL](#rip_skewed_oval), taking the same five fields. NEWCMDS.RIP demonstrates it both "With a border" and "Without a border", proving it honors [RIP_SET_BORDER](2.3-shapes-and-fills.md#rip_set_border) like the documented filled primitives.

A corpus curiosity: six additional apparent uses of `-` in the `.DEF`/`.MNU` files are authoring typos — `!|-----` separator comment lines missing their `!` — which parse as this opcode with dash arguments (`-` is a valid MegaNum digit meaning 0). The shipping RIPtel driver tolerates them without visible failure.

## RIP_SKEWED_OVAL_ARC

_Draw an arc of a rotated ellipse_

|  |  |
| --- | --- |
| **Level** | 0 |
| **Command** | `]` |
| **Arguments** | `x:2 y:2 x_rad:2 y_rad:2 start_ang:2 end_ang:2 rotation:2` _(field meanings from census analysis)_ |

**Format:** `!|] <x> <y> <x_rad> <y_rad> <start_ang> <end_ang> <rotation>` **Example:** `!|]50151G0M20601M`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting) _(inferred)_ **Evidence:** corpus (NEWCMDS.RIP — named in comment "Show a RIP_SKEWED_OVAL_ARC" — and SHAPES.RIP; 3 uses) — not in the 2.00a4 spec, not in the RIPSCRIP.HLP name inventory, not in SyncTERM

Arc segment of a rotated ellipse: seven 2-digit fields extending the [RIP_SKEWED_OVAL](#rip_skewed_oval) layout with a start/end angle pair, in the position shown above.

## RIP_SKEWED_OVAL_PIE_SLICE

_Draw a filled pie slice of a rotated ellipse_

|  |  |
| --- | --- |
| **Level** | 0 |
| **Command** | `[` |
| **Arguments** | `x:2 y:2 x_rad:2 y_rad:2 start_ang:2 end_ang:2 rotation:2` _(field meanings from census analysis)_ |

**Format:** `!|[ <x> <y> <x_rad> <y_rad> <start_ang> <end_ang> <rotation>` **Example:** `!|[503F1G0M20601M`

**Attributes used:** Draw Color, Back Color, Line Style, Fill Style, Write Mode, Viewport, Port, Base Math (current setting) _(inferred)_ **Evidence:** corpus (NEWCMDS.RIP — named in comment "Show a RIP_SKEWED_OVAL_PIE_SLICE" — and SHAPES.RIP; 6 uses) — not in the 2.00a4 spec, not in the RIPSCRIP.HLP name inventory, not in SyncTERM

Pie slice of a rotated ellipse; the arc ends are joined to the center and the interior filled, as with [RIP_OVAL_PIE_SLICE](2.3-shapes-and-fills.md#rip_oval_pie_slice). Same seven fields as [`]`](#rip_skewed_oval_arc); the border is controlled by [RIP_SET_BORDER](2.3-shapes-and-fills.md#rip_set_border) (NEWCMDS.RIP demos both states).

## RIP_SKEWED_OVAL_CHORD

_Draw a filled chord segment of a rotated ellipse_

|  |  |
| --- | --- |
| **Level** | 0 |
| **Command** | `+` |
| **Arguments** | `x:2 y:2 x_rad:2 y_rad:2 start_ang:2 end_ang:2 rotation:2` _(field meanings from census analysis)_ |

**Format:** `!|+ <x> <y> <x_rad> <y_rad> <start_ang> <end_ang> <rotation>` **Example:** `!|+803F1G0M20601M`

**Attributes used:** Draw Color, Back Color, Line Style, Fill Style, Write Mode, Viewport, Port, Base Math (current setting) _(inferred)_ **Evidence:** corpus (NEWCMDS.RIP — named in comment "Show a RIP_SKEWED_OVAL_CHORD" — and SHAPES.RIP; 6 uses) — not in the 2.00a4 spec, not in the RIPSCRIP.HLP name inventory, not in SyncTERM

Chord segment: the arc's endpoints are joined by a straight line and the enclosed segment is drawn/filled. Same seven fields as [`]`](#rip_skewed_oval_arc); demonstrated with and without border in NEWCMDS.RIP.

## RIP_FILLED_OVAL_CHORD

_Draw a filled chord segment of an (unrotated) ellipse_

|  |  |
| --- | --- |
| **Level** | 0 |
| **Command** | `_` |
| **Arguments** | `x:2 y:2 start_ang:2 end_ang:2 x_rad:2 y_rad:2` _(field meanings from census analysis)_ |

**Format:** `!|_ <x> <y> <start_ang> <end_ang> <x_rad> <y_rad>` **Example:** `!|_B03F90601G0M`

**Attributes used:** Draw Color, Back Color, Line Style, Fill Style, Write Mode, Viewport, Port, Base Math (current setting) _(inferred)_ **Evidence:** corpus (NEWCMDS.RIP — named in comment "Show a RIP_FILLED_OVAL_CHORD" — and SHAPES.RIP; 6 uses) — not in the 2.00a4 spec, not in the RIPSCRIP.HLP name inventory, not in SyncTERM

The odd one out of the family: TeleGrafix's comment names it _without_ "skewed", and its argument layout differs — six fields, with the angle pair _before_ the radii (matching the documented [RIP_OVAL](#rip_oval)/[RIP_OVAL_PIE_SLICE](2.3-shapes-and-fills.md#rip_oval_pie_slice) ordering) and no rotation field. It fills the chord segment of an axis-aligned ellipse; border behavior follows [RIP_SET_BORDER](2.3-shapes-and-fills.md#rip_set_border).

## RIP_BEZIER

_Draw a bezier curve_

|               |                                                         |
| ------------- | ------------------------------------------------------- |
| **Level**     | 0                                                       |
| **Command**   | `Z`                                                     |
| **Arguments** | `x1:XY y1:XY x2:XY y2:XY x3:XY y3:XY x4:XY y4:XY cnt:2` |

**Format:** `!|Z <x1> <y1> <x2> <y2> <x3> <y3> <x4> <y4> <cnt>` **Example:** `!|ZCSIYDBIYDVIZEEJ014`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting) **Evidence:** 2.00a4 ([2.30 entry](../../2.30/ripscrip/2.2-curves.md#rip_bezier)) · HLP (`RIP_Bezier`) · corpus (22 uses in 4 files) · SyncTERM (ripper.c:14140)

This command provides customizable curves. Four control points are used to create the shape of the curve. The curves beginning point is at point (x1,y1) and it ends at (x4,y4). Points (x2,y2) and (x3,y3) are not necessarily on the curve, but are used to pull the curve in their direction. The diagram below indicates how points 2 and 3 can be utilized to form the desired curve. Note that points 2 and 3 are not actually on the curve (usually), but points 1 and 4 are.

```text
          X2

         ▄▀▀▀▄
       ▄▀     ▀▀▄▄
      █           ▀▄            X4
     █              ▀▄          █
   X1                 █       ▄▀
                       █    ▄▀
                        ▀▄▄▀

                         X3
```

The last parameter of this command is the `<cnt>` parameter. This determines how many "segments" the curve should be drawn in. Each segment is in fact, a straight line. The more segments you allow, the smoother the curve may be. If a curve does not have a significant amount of "curviness" then a low "count" can improve performance of the curve drawing. The LANDSCPE.RIP example above uses `14` = 40 segments.

The entire bezier curve is drawn using the current line pattern, thickness and write mode. _(v2.A3)_

The actual bezier curve can be described mathematically by the following parametric equations: _(v2.A3)_

```text
X = X1*(1-t)^3 + X2*3*t*(t-1)^2 + X3*3*t^2*(1-t) + X*4*t^3
Y = Y1*(1-t)^3 + Y2*3*t*(t-1)^2 + Y3*3*t^2*(1-t) + Y*4*t^3
```

These are the normal equational forms of the weighted sum B-Spline function using four control points instead of directional vectors. The variable T is varied from 0.0 through 1.0 over some increment to achieve the total curve. _(v2.A3)_

Bezier Curves use "floating point" math internally for their processing; all parameters specified for this command are simple integers however. If XOR is active when you draw a bezier curve, you will find gaps at the intersections of each segment. _(v1.54)_

> **NOTE:** This command is implemented in C using double floating point numbers. To make sure you do not have round-off or precision errors in another language, you should also use an equivalent floating point type. In Borland's Turbo Pascal, do not use REAL's, but use DOUBLE's instead! _(v1.54)_

## RIP_POLY_BEZIER

_Added in RIPscrip v2.A1._

_Draw a poly-bezier curve (multi-segmented, closed)_

|  |  |
| --- | --- |
| **Level** | 0 |
| **Command** | `z` |
| **Arguments** | `num:2 count:2 x_base:XY y_base:XY ... type:1 x1:XY y1:XY ... type:1 x1:XY y1:XY x2:XY y2:XY x3:XY y3:XY ...` |

**Format:** `!|z <num> <count> <x_base> <y_base> ... <type> <x1> <y1> ... <type> <x1> <y1> <x2> <y2> <x3> <y3> ...` **Example:** See below

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting) **Evidence:** 2.00a4 ([2.30 entry](../../2.30/ripscrip/2.2-curves.md#rip_poly_bezier)) · corpus (2 uses in SHAPES.RIP) · SyncTERM (ripper.c:14870 — shared parser, closed/unfilled flags) — absent from the RIPSCRIP.HLP name inventory, though its poly-bezier error strings apply

This command is a variation on the [RIP_BEZIER](#rip_bezier) command. The typical RIP_BEZIER command creates one single bezier curve. This command combines one or more bezier curves into a chain of connected bezier curves. Each segment (curve) of the poly-bezier can be of different types. It can be a bezier curve, or a simple straight line. The combination of these facilities allows the construction of say, a text character representation of a font that has some straight line segments and some curved segments. The curved portions (bezier curves) are actually comprised of many smaller straight line segments - when viewed on a monitor, they appear to be a continuous curve. The actual number of segments comprising a particular curve in the poly-bezier is determined by the command's `<count>` parameter.

This command is different than any other in RIPscrip in that its variable length portion of the command is made up of different blocks of parameters which can be different byte lengths! If you look at the definition, the beginning of the command includes a `<num>`, `<count>`, `<x_base>` and `<y_base>` parameter - the remainder of the command is variable length in nature.

HLP adds one 3.x validation rule the 2.00a4 draft lacks: "The last segment of a poly-bezier cannot be a curve". SyncTERM funnels `z`, [`t`](#rip_poly_bezier_line), and [`x`](2.3-shapes-and-fills.md#rip_filled_poly_bezier) into a single shared implementation differing only in close/fill flags.

### Parameter blocks

The `<num>` parameter defines how many parameter blocks are to be expected in this command. _(v2.A2)_

The `<count>` parameter defines how many "segments" are to be drawn for each bezier curve segment of this poly-bezier curve. This means that all bezier curve segments in a poly-bezier will have the same number of segments for their respective curves. _(v2.A2)_

The `<x_base>` and `<y_base>` parameters define the pixel beginning point for the entire poly-bezier "curve". To determine what type of parameter block follows, you need to look at the first byte of the segment; this is the `<type>` parameter.

The `<type>` parameter defines what type of parameter block is to be parsed. The possible types are:

| Type | Description                  |
| ---- | ---------------------------- |
| 0    | Straight line segment        |
| 1    | Smooth bezier curve segment  |
| 2    | Jointed bezier curve segment |

A "smooth" segment is a bezier curve whose beginning curve is totally smooth with the ending curve of a previous bezier curve. In practice on a terminal system, this doesn't mean anything to a terminal program because it is going to display a bezier curve as a normal bezier curve. The meaning of having a second bezier curve type comes into play when using paint program utilities that let you manipulate poly-bezier curves. A paint system might use this information to control how end-points and control points can be moved because they are "locked" with one or two points from the previous (or next) bezier curve. See the notes at the end of this command's description about smooth bezier curve joints.

If the `<type>` parameter indicates that the segment is a straight-line segment, then there are only two remaining parameters (not including the `<type>` parameter) in the block (the line's end-points) as in the following syntax definition:

```text
type:1 x1:XY y1:XY
```

The `<type>` parameter should be set to "0" for line segments. The (x1,y1) parameters define the endpoints of the line segment. The beginning point of the line is the end-point of the last segment (or the (x_base,y_base) parameters of the command header if this is the first parameter block).

If the `<type>` indicates that the segment is a bezier curve, then the parameter block contains six parameters as in the following syntax definition (not including the `<type>` parameter):

```text
type:1 x1:XY y1:XY x2:XY y2:XY x3:XY y3:XY
```

The first byte is the `<type>` value for this block (be set to 1 or 2 for a bezier curve segment). The remaining six parameters define the first two control points and the end-point for the bezier curve segment. The beginning point of the curve segment is defined as the end-point of the previous block (or the (x_base,y_base) parameter in the header of the command if this is the first parameter block).

Refer to the RIP_BEZIER command for a complete description of bezier curve beginning/end-points and how control points shape the curve to a desired result.

### Example

An example of a poly-bezier curve might be shown as follows: _(v2.A2)_

```text
Segment 1 ────────────┐   P2
  (line)      P1       (50,10)        P3 (110,10)
           (10,10) ■▒▒▒▒■▒▒         X
                   ▒       ▒   ┌────────────── Segment 2
                   ▒        ▒─┘                (bezier)
                   ▒        ▒
                   ▒        ▒       X P4 (110,70)
   Segment 0 ─────▒      ▒▒
     (line)        ▒ P5 ■▒▒▒
                   ▒(50,70) ▒          X P6 (120,70)
                   ▒         ▒───────────────── Segment 3
                   ▒         ▒                    (bezier)
                   ▒(50,130) ▒
        BASE       ▒    P8  ▒            P7 (120,130)
        POINT ────■▒▒▒▒■▒▒▒           X
                 P0/P9
              (10,130) └──────────────────────── Segment 4
                                                  (line)
```

The above diagram shows 5 different segments to the poly-bezier curve. Segments 0, 1 and 4 are straight line segments, and semgents 2 and 3 are actual bezier curves. All X/Y points (beginning-points, end-points and control-points are depicted with X's and are labeled P0 through P9. The parameters to represent this command might appear something like the following (in expanded decimal):

```text
     Decimal     MegaNum     Description
     ──────────────────────────────────────────────────
 !|z 05 ........ 05 ........ 5 segments
     10 ........ 0A ........ 10 lines per bezier curve
       10,130 ..   0A 3M ... Base point - P0
     0 ......... 0 ......... Segment 0 - Line
       10,10 ...   0A 0A ... Line endpoint - P1
     0 ......... 0 ......... Segment 1 - Line
       50,10 ...   1E 0A ... Line endpoint - P2
     1 ......... 1 ......... Segment 2 - Smooth Bezier
       110,10 ..   32 0A ... Control point - P3
       110,70 ..   32 1Y ... Control point - P4
       50,70 ...   1E 1Y ... Curve end point - P5
     2 ......... 2 ......... Segment 3 - Jointed Bezier
       120,70 ..   3C 1Y ... Control point - P6
       120,130 .   3C 3M ... Control point - P7
       50,130 ..   1E 3M ... Curve end point - P8
     0 ......... 0 ......... Segment 4 - Line
       10,130 ..   0A 3M ... Line endpoint - P9
```

Notice that in the preceding example we are not expressing numbers in meganums as would normally be used in RIPscrip files. This is for simple human readability for this example.

The completed command looks like this (base math setting = meganums): _(v2.A2)_

`!|z050A0A3M00A0A01E0A1320A321Y1E1Y23C1Y3C3M1E3M00A3M`

### Smooth joints

This command is often used to combine several segments together into one larger "curve". As previously mentioned, the end-point of one segment is the beginning point of the next segment (if any).

When you are dealing with bezier curve segments, it is possible to make sure that the end of one curve has a perfectly smooth curve with the beginning of the next curve. If two adjacent bezier curve blocks are to have a perfectly smooth "connecting joint", then you must make sure that the last control point and the end-point of the first curve are colinear with the first control point of the second curve. This is not a requirement of this command - it is generic in that it can display any combination of line segments and bezier curve segments. We are simply noting this mathematical attribute of bezier curves for the benefit of the RIPscrip programmer to generate smooth segmented curves in some sort of paint program.

A bezier curve can also have a "smooth joint" with a line segment. If the bezier curve is followed by a line segment, then to make sure that the joint has a smooth curve, you must make sure that the last control point and the end point of the bezier curve segment are colinear with the end-point of the following line segment. The same holds true of the segments are reversed (line segment followed by a bezier curve segment) - the only difference is that the beginning point of a line segment is determined by the end-point of its preceding block (or the base point if the line segment is the first parameter block) and you would be making the starting point of the bezier curve and the 1ST control point colinear.

**NOTE:** Poly-Bezier curves might exhibit pixel annomolies at the beginning and ending points of each segment if thick lines are used for the curve with XOR or other non-COPY write modes. The reason for this is because some graphics engines (Windows, Macintosh, MS-DOS, etc) might not handle things 100.0% perfectly for thick poly-lines in XOR mode (poly-lines are used to represent this command after all segments are broken down).

## RIP_POLY_BEZIER_LINE

_Added in RIPscrip v2.A2._

_Draw a poly-bezier curve (open-ended)_

|  |  |
| --- | --- |
| **Level** | 0 |
| **Command** | `t` |
| **Arguments** | `num:2 count:2 x_base:XY y_base:XY ... type:1 x1:XY y1:XY ... type:1 x1:XY y1:XY x2:XY y2:XY x3:XY y3:XY ...` |

**Format:** `!|t <num> <count> <x_base> <y_base> [<type> <block>]...` **Example:** `!|t03142JA62HA62JEA66HUA6JGA6HCEE0JCEG`

**Attributes used:** Draw Color, Back Color, Line Style, Write Mode, Viewport, Port, Base Math (current setting) **Evidence:** 2.00a4 ([2.30 entry](../../2.30/ripscrip/2.2-curves.md#rip_poly_bezier_line)) · corpus (12 uses in ONLINE.RIP, CURVES.RIP, SHAPES.RIP) · SyncTERM (ripper.c:14721 — shared bezier parser, open/unfilled flags) — poly-bezier commands are absent from the RIPSCRIP.HLP name inventory, though its error strings validate them ("The last segment of a poly-bezier cannot be a curve")

This command is a variation on the [RIP_POLY_BEZIER](#rip_poly_bezier) command. The difference is that the RIP_POLY_BEZIER command is a closed object, meaning that the beginning and ending points are connected. With RIP_POLY_BEZIER_LINE, the object does not have it's end points connected. This is just like the difference between [RIP_POLYGON](2.3-shapes-and-fills.md#rip_polygon) and [RIP_POLYLINE](2.1-lines.md#rip_polyline).

This command uses the same parameter order as RIP_POLY_BEZIER. The corpus example (3 segments, 14 lines per curve) draws the flowing curve accents in the CURVES demo.

---

[◀ Prev: 2.1 Lines](2.1-lines.md) · [Contents](README.md) · [Next: 2.3 Shapes & Fills ▶](2.3-shapes-and-fills.md)
